package behavioral.observer.ca6;

public interface IPlayerListener {
  public void listen(PlayerData playerData);
}
